--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,11 +1,14 @@
 @use '_hero';
+@use 'components/infos_bar';
+@use 'components/buttons';
 
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: Roboto, sans-serif;
-    color:#fff;;
+    color:#fff;
+    list-style: none;
 }
 
 .container {
