--- a/src/styles/_hero.scss
+++ b/src/styles/_hero.scss
@@ -3,7 +3,7 @@
 .hero {
     padding-top: 64px;
     padding-bottom: 100px;
-    background-image: url(../images/witcherfundo.png);
+    background-image: url(../images/bolo.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     position: relative;
